<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_data_entry"
        android:icon="@drawable/ic_edit"
        android:title="@string/nav_data_entry" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_assessment"
        android:title="@string/nav_reports" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
