<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.courierearn.presentation.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_data_entry"
        android:name="com.courierearn.presentation.ui.dataentry.DataEntryFragment"
        android:label="@string/nav_data_entry"
        tools:layout="@layout/fragment_data_entry" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.courierearn.presentation.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.courierearn.presentation.ui.reports.ReportsFragment"
        android:label="@string/nav_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.courierearn.presentation.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
